Updated the credits section, updated the class for the <html> tag to enable smooth scrolling throughout the entire page.

--- a/wolong/equipment/wizardry/wizardry.html
+++ b/wolong/equipment/wizardry/wizardry.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -358,7 +358,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080</span>
+                <span>LiuKang1080, SacredForce</span>
                 <span>Link to the Wo Long: Fallen Dynasty Data Doc by ShinSeiKen: <a class="text-sky-500 font-bold" 
                     href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQHvS8111EBIv01FqnOnJJ5Iv6HUsicqnlu-l9pVXoOHLBKOfMD7YGdjJnTMcb_LTDuc_Ux9ATrJfNZ/pubhtml#"
                     target="_blank" rel="noopener noreferrer">here</a></span>
