--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -118,7 +118,7 @@
                     <!-- Dropdown menu -->
                     <div id="equipment_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2  text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Wizardry Spells</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="https://liukang1080.github.io/gamewiki/wolong/equipment/wizardry/wizardry.html">Wizardry Spells</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Divine Beasts</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Weapons</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Armor</a></li>
@@ -322,7 +322,7 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Wizardry Spells</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="https://liukang1080.github.io/gamewiki/wolong/equipment/wizardry/wizardry.html">Wizardry Spells</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Divine Beasts</a>
