Added more content to wizardry.html. Added new images in wizardry/img/.

--- a/wolong/equipment/wizardry/wizardry.html
+++ b/wolong/equipment/wizardry/wizardry.html
@@ -577,6 +577,169 @@
                         Hurls a mote of fire in front of you.
                     </td>
                 </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Amplify Damage</span>
+                        <img class="object-none" src="./img/amplify_damage.png" alt="">
+                    </div></td>
+                    <td>780</td>
+                    <td>8</td>
+                    <td>3</td>
+                    <td>
+                        For a certain period of time, increases both the damage you deal to enemies and receive from them.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Fireblast</span>
+                        <img class="object-none" src="./img/fireblast.png" alt="">
+                    </div></td>
+                    <td>470</td>
+                    <td>4</td>
+                    <td>0</td>
+                    <td>
+                        Discharges a ball of fire that flies on a gravitational arc, and explodes upon hitting an enemy or 
+                        terrain.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Burning Flamewave</span>
+                        <img class="object-none" src="./img/burning_flamewave.png" alt="">
+                    </div></td>
+                    <td>680</td>
+                    <td>10</td>
+                    <td>3</td>
+                    <td>
+                        Summons continuous eddies of flame in front of you. This deals damage over time to any enemies that come
+                        in contact with it.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Flame Weapon</span>
+                        <img class="object-none" src="./img/flame_weapon.png" alt="">
+                    </div></td>
+                    <td>680</td>
+                    <td>12</td>
+                    <td>7</td>
+                    <td>
+                        For a certain period of time, enchants your current melee weapon with Flame.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Surging Blaze</span>
+                        <img class="object-none" src="./img/surging_blaze.png" alt="">
+                    </div></td>
+                    <td>420</td>
+                    <td>3</td>
+                    <td>7</td>
+                    <td>
+                        Hurls multiple fireballs in a cone-shaped area of effect.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Scorch Comet</span>
+                        <img class="object-none" src="./img/scorch_comet.png" alt="">
+                    </div></td>
+                    <td>840</td>
+                    <td>6</td>
+                    <td>7</td>
+                    <td>
+                        Discharges a large ball of fire to the front.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Engulfing Inferno</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>420</td>
+                    <td>25</td>
+                    <td>7</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wizardry Spell Mastery</a>
+                        <br><br>
+
+                        Summons and attacks with multiple pillars of flame.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Overpower Burst</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>890</td>
+                    <td>30</td>
+                    <td>0</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Scarlet Crystal</a>
+                        <br><br>
+
+                        Greatly increases the damage dealt by the Wizardry Spell or Martial Arts next used.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Scorch Sweep</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>520</td>
+                    <td>20</td>
+                    <td>7</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Wizardry Spell Mastery</a>
+                        <br><br>
+
+                        Emits a stream of fire to sweep within a cone-shaped area of effect.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Scorch Stream</span>
+                        <img class="object-none" src="./img/scorch_stream.png" alt="">
+                    </div></td>
+                    <td>630</td>
+                    <td>20</td>
+                    <td>7</td>
+                    <td>
+                        Emits a stream of fire to the front. Continue firing by holding down the input for Wizardry Spells.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Bursting Fireball</span>
+                        <img class="object-none" src="./img/bursting_fireball.png" alt="">
+                    </div></td>
+                    <td>940</td>
+                    <td>15</td>
+                    <td>12</td>
+                    <td>
+                        Hurls a large fireball that will split into multiple small fireballs and explode after a certain period
+                        of time or upon hitting an enemy or terrain.
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center">
+                        <span>Scorch Spinner</span>
+                        <img class="object-none" src="" alt="">
+                    </div></td>
+                    <td>780</td>
+                    <td>40</td>
+                    <td>15</td>
+                    <td>
+                        <span class="text-red-500">Unlock Requirement</span>: Complete the mission - 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Scarlet Crystal</a>
+                        <br><br>
+
+                        Shoots a stream of fire from both hands, engulfing nearby enemies in flames.
+                    </td>
+                </tr>
             </table>
         </div>
     </section>
